youfull/objects/Report_Config__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_to__c</fullName>
        <label>Applicable to</label>
        <picklist>
            <picklistValues>
                <fullName>Avon Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Division Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Zone Manager</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Columns_To_Display__c</fullName>
        <label>Columns To Display</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Sort__c</fullName>
        <label>Default Sort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Title_Filter__c</fullName>
        <description>Defines the default Title level that should be displayed. This is applicable only to Zone and Division Manager users.</description>
        <inlineHelpText>Defines the default Title level that should be displayed. This is applicable only to Zone and Division Manager users.</inlineHelpText>
        <label>Default Title Filter</label>
        <picklist>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dowload_Limit__c</fullName>
        <description>Stores download limit for a particular report</description>
        <label>Dowload Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Genealogy_Criteria__c</fullName>
        <label>Genealogy Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Recruits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Recruits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Removed_Reps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Removed Reps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Impersonation_Applicable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if the given report should be displayed in the Impersonation reports/pages list drop-down</description>
        <inlineHelpText>Check if the given report should be displayed in the Impersonation reports/pages list drop-down</inlineHelpText>
        <label>Is Impersonation Applicable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LANG_CD__c</fullName>
        <label>LANG CD</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ldr_Smry_Criteria__c</fullName>
        <label>Ldr Smry Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipName>Market_Drilldown_Configs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max_Page_Limit__c</fullName>
        <description>Maximum number of rows that can be displayed on the given page. E.g. for &apos;My Team&apos; and &apos;My Team Orders&apos; - this is max # of rows after user drills down</description>
        <inlineHelpText>Maximum number of rows that can be displayed on the given page. E.g. for &apos;My Team&apos; and &apos;My Team Orders&apos; - this is max # of rows after user drills down</inlineHelpText>
        <label>Max Page Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Multiple Report name</description>
        <label>Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_N_Mail_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next N Mail Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Historical_Cmpgns_for_Filter__c</fullName>
        <description>Number of Historical Campaigns for the &apos;Campaigns&apos; filter, e.g. if set to 2, The filter will show current campaign, prior campaign, and prior - 1 campaign, in other words 2 campaigns after the current one</description>
        <inlineHelpText>Number of Historical Campaigns for the &apos;Campaigns&apos; filter, e.g. if set to 2, The filter will show current campaign, prior campaign, and prior - 1 campaign, in other words 2 campaigns after the current one</inlineHelpText>
        <label>Number of Historical Cmpgns for Filter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Criteria__c</fullName>
        <label>Order Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <description>Pagination page size</description>
        <inlineHelpText>Pagination page size</inlineHelpText>
        <label>Page Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Criteria__c</fullName>
        <label>Rep Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <description>Unique Id for the drilldown</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Code that will be passed from the pages.</inlineHelpText>
        <label>Report Id</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Report_Sequence__c</fullName>
        <label>Report Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inherited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders_Not_Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders_on_Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders_below_Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders_at_Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total_Orders_received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return_Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved_Minimum_Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current_Balance_Past_Due_Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal_Sales_Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additions_Reinstatements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development_LOA_1_6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downline_Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATD_Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking_and_Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title_Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday_Anniversaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance_Past_Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal_Sales_Qual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures_Not_Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st_Order_Award_Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Orders_Not_Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Orders_on_Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Orders_below_Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Orders_at_Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Pending_Orders</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <label>Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITL_LVL_NBR__c</fullName>
        <description>Stores Title Level Numbers</description>
        <inlineHelpText>User can select multiple datas for this field in a single record</inlineHelpText>
        <label>Title Level Number</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>T_List_Page_Size__c</fullName>
        <description>Page Size for the &apos;T-List&apos; version of the &apos;My Team&apos; and &apos;My Team Orders&apos; report</description>
        <inlineHelpText>Page Size for the &apos;T-List&apos; version of the &apos;My Team&apos; and &apos;My Team Orders&apos; report</inlineHelpText>
        <label>T-List Page Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Available_Width__c</fullName>
        <label>Total Available Width</label>
        <summarizedField>Report_Column_New__c.Width__c</summarizedField>
        <summaryFilterItems>
            <field>Report_Column_New__c.Is_Hidden__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Report_Column_New__c.Report_Config__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Report Config</label>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_RemovedRep_Recrt</fullName>
        <active>true</active>
        <description>This validation rule is validating Two Checkboxes Include_Recruits and Include_Removed_Reps are not checked together</description>
        <errorConditionFormula>Include_Recruits__c  = true  &amp;&amp;  Include_Removed_Reps__c =true</errorConditionFormula>
        <errorMessage>Two Checkboxes Include_Recruits and Include_Removed_Reps Cannot be Checked together</errorMessage>
    </validationRules>
</CustomObject>